<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/nick_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:layout_alignBottom="@+id/nickname"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/nick_name"
        android:layout_marginVertical="220dp"
        android:hint="@string/prompt_nick"
        android:textSize="20sp"
        android:text=""/>
    <TextView
    android:id="@+id/account_inf"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/nick_name"
    android:layout_marginTop="10dp"
    android:text="@string/account"
    android:textSize="25sp"/>
    <EditText
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/account_inf"
        android:hint="@string/prompt_acount"
        android:layout_below="@+id/nick_name"
        android:layout_alignBottom="@+id/account_inf"
        android:textSize="20sp"
        android:text=""/>
    <TextView
        android:id="@+id/password_inf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_inf"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/password_inf"
        android:hint="@string/prompt_password"
        android:layout_below="@+id/account_inf"
        android:layout_alignBottom="@+id/password_inf"
        android:textSize="20sp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textSize="25sp"/>


</RelativeLayout>